nuevo html para registro

--- a/registro.html
+++ b/registro.html
@@ -34,15 +34,30 @@
 
     <section>
 
+        <div class="kid"><img src="img/kid01.svg"></div>
+        <div class="girl"><img src="img/kid01.svg"></div>
+
         <div id="register_form">
-            <h2>Completa tus datos o continua como anonimo para jugar</h2>
+            <h2>Completa tus datos o <br>continua como anonimo para jugar</h2>
             <form>
                 <div class="input">
                   <input type="text" placeholder="Tu nombre">
                 </div>  
+                <div class="input">
+                  <select>
+                    <option>Elegi tu centro</option>
+                    <option>2</option>
+                  </select>
+                </div> 
             </form>
+            <div class="row">
+              <div class="col-md-3">
+                  <a href="#" class="btn_primary">Siguiente</a>
+                  <a href="#" class="btn_secundary">Continuar como anonimo</a>
 
-        </div>
+              </div>
+            
+            </div>
 
 
         <div id="bg">
