--- a/registro.html
+++ b/registro.html
@@ -37,17 +37,20 @@
         <div class="kid"><img src="img/kid01.svg"></div>
         <div class="girl"><img src="img/kid01.svg"></div>
 
-        <div id="register_form">
+        <div id="register_form" class="row text-center">
             <h2>Completa tus datos o <br>continua como anonimo para jugar</h2>
-            <form>
+            <form><!-- 
+              Agregar .error_form al input para el estilo -->
                 <div class="input">
                   <input type="text" placeholder="Tu nombre">
                 </div>  
                 <div class="input">
+                  <div class="style-select">
                   <select>
                     <option>Elegi tu centro</option>
                     <option>2</option>
                   </select>
+                  </div>
                 </div> 
             </form>
             <div class="row">
@@ -59,7 +62,7 @@
             
             </div>
 
-
+        </div>
         <div id="bg">
           <div class="cloud" style="left:350px;top:350px"></div>
            <div class="cloud" style="top:450px"></div>
