Nueva version con html
- Registro: Esta pantalla va luego de presionar jugar.
- Areyouready : esta pantalla iría luego de completar el registro, esta unos segundos y luego aparece la primera pregunta
- Question type img: Es una pregunta para seleccionar imagen
- Question type multiple choice: Varios input radio tengo que seleccionar 1
- Question type true false: seleccionar verdadero o falso, hay una clase cuando se selecciona para mostrar que quedo marcado.

--- a/areyouready.html
+++ b/areyouready.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body class="register">
+  <body class="areyouready">
 
     <div id="logo"><img src="img/logo.svg" title="CPD Mides"></div>
 
@@ -34,35 +34,13 @@
 
     <section>
 
-        <div class="kid"><img src="img/kid01.svg"></div>
-        <div class="girl"><img src="img/kid01.svg"></div>
+        <div id="ready_tostart" class="main_content">
+          
+          <h2>¿Estás listo Agustin Kryger?</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget odio eu tellus ullamcorper ultricies. Donec a velit felis. Aliquam sodales eu mauris quis efficitur.</p>
 
-        <div id="register_form" class="main_content row text-center">
-            <h2>Completa tus datos o <br>continua como anonimo para jugar</h2>
-            <form><!-- 
-              Agregar .error_form al input para el estilo -->
-                <div class="input">
-                  <input type="text" placeholder="Tu nombre">
-                </div>  
-                <div class="input">
-                  <div class="style-select">
-                  <select>
-                    <option>Elegi tu centro</option>
-                    <option>2</option>
-                  </select>
-                  </div>
-                </div> 
-            </form>
-            <div class="row">
-              <div class="col-md-12">
-                  <a href="areyouready.html" class="btn_primary">Siguiente</a>
-                  <a href="areyouready.html" class="btn_secundary">Continuar como anonimo</a>
 
-              </div>
-            
-            </div>
-
-        </div>
+        </div>  
         <div id="bg">
           <div class="cloud" style="left:350px;top:350px"></div>
            <div class="cloud" style="top:450px"></div>
