--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <nav>
       <ul>
-        <li><a href="#">jugar</a></li>
-        <li><a href="#">centros promotores</a></li>
-        <li><a href="#">estrategia</a></li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Localización</a></li>
+        <li><a href="#">Centros Educativos Promotores de Derechos</a></li>
         <li><a href="#">aprende y comparti</a></li>
         <li><a href="#">sobre nosotros</a></li>
       </ul>
@@ -38,13 +38,15 @@
               <h1>centros educativos
                 promotores de derechos</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
-                <a href="#" class="btn_primary">jugar</a>
+                <a href="registro.html" class="btn_primary">jugar</a>
             </div>
-        <div id="bg">
-          <div class="cloud" style="left:350px;top:350px"></div>
-           <div class="cloud" style="top:450px"></div>
-          <img src="img/bghome.svg">
-        </div>
+
+            
+            <div id="bg">
+              <div class="cloud" style="left:350px;top:350px"></div>
+               <div class="cloud" style="top:450px"></div>
+              <img src="img/bghome.svg">
+            </div>
 
     </section>  
 
