--- a/areyouready.html
+++ b/areyouready.html
@@ -39,6 +39,8 @@
           <h2>¿Estás listo Agustin Kryger?</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget odio eu tellus ullamcorper ultricies. Donec a velit felis. Aliquam sodales eu mauris quis efficitur.</p>
 
+          <a href="questiontype_img.html">Seguir</a>
+
 
         </div>  
         <div id="bg">
