--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="home_section">
               <h1>centros educativos
                 promotores de derechos</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+                <p>La Estrategia de Centros Educativos Promotores de Derechos (CPD) es una propuesta de la Dirección Nacional de Promoción Sociocultural (DNPSC) del MIDES que busca complementar acciones con la Dirección de Derechos Humanos de CODICEN y los organismos centrales de la ANEP, sumando a otras instituciones como el MSP, el MEC y la UDELAR. </p>
                 <a href="registro.html" class="btn_primary">jugar</a>
             </div>
 
