--- a/questiontype_truefalse_noimage.html
+++ b/questiontype_truefalse_noimage.html
@@ -63,6 +63,7 @@
               
               <p>Para avanzar debes selecionar a 
                 menos una respuesta.</p>
+                <a class="btn_primary" href="#">Aceptar</a>
 
           </div>  
 
