--- a/questiontype_img.html
+++ b/questiontype_img.html
@@ -69,7 +69,7 @@
 
           <div class="row">
               <div class="col-md-12">
-                  <a href="areyouready.html" class="btn_primary">Siguiente</a>
+                  <a href="questiontype_multiplechoice.html" class="btn_primary">Siguiente</a>
               </div>
             
           </div>
