--- a/questiontype_multiplechoice.html
+++ b/questiontype_multiplechoice.html
@@ -77,7 +77,7 @@
 
           <div class="row">
               <div class="col-md-12">
-                  <a href="areyouready.html" class="btn_primary">Siguiente</a>
+                  <a href="questiontype_truefalse.html" class="btn_primary">Siguiente</a>
               </div>
             
           </div>
