--- a/questiontype_truefalse.html
+++ b/questiontype_truefalse.html
@@ -58,7 +58,7 @@
 
           <div class="row">
               <div class="col-md-12">
-                  <a href="areyouready.html" class="btn_primary">Siguiente</a>
+                  <a href="questiontype_truefalse_noimage.html" class="btn_primary">Siguiente</a>
               </div>
             
           </div>
