--- a/questiontype_ahorcado.html
+++ b/questiontype_ahorcado.html
@@ -47,6 +47,9 @@
           <div class="typos">
 
               <div class="typo"></div>
+              <div class="typo"></div>
+              <div class="typo"></div>
+              <div class="typo"></div>
 
           </div>  
 
