--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
 
     <nav>
       <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Localización</a></li>
-        <li><a href="#">Centros Educativos Promotores de Derechos</a></li>
-        <li><a href="#">aprende y comparti</a></li>
-        <li><a href="#">sobre nosotros</a></li>
+        <li><a href="#">Sobre nosotros</a></li>
+        <li><a href="#">Contacta a DATA</a></li>
+        <li><a href="#">Contacta a MIDES</a></li>
       </ul>
     </nav>
 
@@ -38,7 +36,9 @@
               <h1>centros educativos
                 promotores de derechos</h1>
                 <p>La Estrategia de Centros Educativos Promotores de Derechos (CPD) es una propuesta de la Dirección Nacional de Promoción Sociocultural (DNPSC) del MIDES que busca complementar acciones con la Dirección de Derechos Humanos de CODICEN y los organismos centrales de la ANEP, sumando a otras instituciones como el MSP, el MEC y la UDELAR. </p>
-                <a href="registro.html" class="btn_primary">jugar</a>
+                <a href="registro.html" class="btn_primary">Jugar</a>
+                <a href="registro.html" class="btn_primary">Aprender</a>
+
             </div>
 
             
