--- a/registro.html
+++ b/registro.html
@@ -38,7 +38,7 @@
         <div class="girl"><img src="img/kid01.svg"></div>
 
         <div id="register_form" class="main_content row text-center">
-            <h2>Completa tus datos o <br>continua como anonimo para jugar</h2>
+            <h2>Completá o seguí como anónimo</h2>
             <form><!-- 
               Agregar .error_form al input para el estilo -->
                 <div class="input">
@@ -49,15 +49,36 @@
                   <select>
                     <option>Elegi tu centro</option>
                     <option>2</option>
+                    <option>Otro</option>
                   </select>
                   </div>
                 </div> 
+
+                <div class="show" id="otro">
+                  <div class="input">
+                    <input type="text" placeholder="Cual?">
+                  </div> 
+                  <div class="checkbox">
+                  <label>
+                    <input type="checkbox"> No pertenezco a ninguno
+                  </label>
+                </div>
+              </div>
+
+
+
             </form>
             <div class="row">
               <div class="col-md-12">
                   <a href="areyouready.html" class="btn_primary">Siguiente</a>
-                  <a href="areyouready.html" class="btn_secundary">Continuar como anonimo</a>
+                  <a href="areyouready.html" class="btn_secundary">
+                    Continuar como anonimo<br>
+                  
+                  </a>
 
+              </div>
+              <div class="col-md-12">
+                  <small>Si jugás como anónimo no aportas puntos a ningún cpd</small>
               </div>
             
             </div>
