--- a/questiontype_ahorcado.html
+++ b/questiontype_ahorcado.html
@@ -53,6 +53,14 @@
 
           </div>  
 
+
+          <div class="lifes">
+              <div class="heart"></div>
+              <div class="heart"></div>
+              <div class="heart"></div>
+
+          </div>  
+
           <div id="keyboard">
 
               <div class="keyboard-row row-1">
@@ -106,16 +114,6 @@
          <span>P</span>
     </div>
   </div>
-  <div id="key-[" class="key">
-       <div class="key-inner">
-         <span>[</span>
-    </div>
-  </div>
-  <div id="key-]" class="key">
-       <div class="key-inner">
-         <span>]</span>
-    </div>
-  </div>
 </div>
 <div class="keyboard-row row-2">
   <div id="key-a" class="key">
@@ -163,28 +161,9 @@
          <span>L</span>
     </div>
   </div>
-  <div id="key-;" class="key">
-    <div class="key-inner">
-         <span>;</span>
-    </div>
-  </div>
-    <div id='key-"' class="key">
-    <div class="key-inner">
-         <span>"</span>
-    </div>
-  </div>
-  <div id='key-\' class="key">
-    <div class="key-inner">
-         <span>\</span>
-    </div>
-  </div>
 </div>
 <div class="keyboard-row row-e">
-  <div id="key-~" class="key">
-       <div class="key-inner">
-         <span>~</span>
-    </div>
-  </div>
+
   <div id="key-z" class="key">
        <div class="key-inner">
          <span>Z</span>
@@ -220,24 +199,12 @@
          <span>M</span>
     </div>
   </div>
-    <div id="key-<" class="key">
-       <div class="key-inner">
-         <span><</span>
-    </div>
-  </div>
-  <div id="key->" class="key">
-       <div class="key-inner">
-         <span>></span>
-    </div>
-  </div>
-        <div id="key-?" class="key">
-       <div class="key-inner">
-         <span>?</span>
-    </div>
+
   </div>
 </div>
 
-          </div>  
+
+</div>  
            
 
           <div class="row">
